--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Platzi Video</title>
+  <title>Pelifast</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="src/css/home.css" />
   <link rel="stylesheet" href="src/css/modal.css" />
@@ -13,7 +13,7 @@
       <div class="sidebar">
         <div class="logo">
           <figure class="logo-image">
-            <img src="src/images/platzi-video.png" alt="Platzi Video - la Plataforma de videos cheveres"/>
+            <h1>Pelifast</h1>
           </figure>
         </div>
         <div class="sidebarPlaylist">
@@ -167,7 +167,7 @@
           <div class="user">
             <p>
               <img src="src/images/covers/gorillaz.jpg" alt=""/>
-              <span>Leonidas Esteban</span>
+              <span>Diego Goñas</span>
             </p>
           </div>
         </div>
