--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="src/css/modal.css" />
 </head>
 <body>
-  <section class="home search-active" id="home">
+  <section class="home" id="home">
     <div class="home-sidebar">
       <div class="sidebar">
         <div class="logo">
@@ -197,15 +197,7 @@
       <!-- </section> -->
     </div>
     <div class="home-featuring" id="featuring">
-      <div class="featuring">
-        <div class="featuring-image">
-          <img src="src/images/covers/solar-sailer.jpg" width="70" height="100" alt="">
-        </div>
-        <div class="featuring-content">
-          <p class="featuring-title">Pelicula encontrada</p>
-          <p class="featuring-album">titulo de la peli</p>
-        </div>
-      </div>
+    
     </div>
   </section>
   <div class="overlay" id="overlay">
