guardando los cambios de los ultimos dias ¿

--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
     <div class="home-primary">
       <!-- <section class="primary"> -->
         <div class="primary-search">
-          <form action="" class="search" id="form">
-            <input type="text" name="name" placeholder="Buscar un artista o tema favorito"/>
+          <form action="" class="search search-container" id="form">
+            <input type="text" name="name" placeholder="Buscar un artista o tema favorito" class="search-input"/>
           </form>
         </div>
         <div class="primary-user">
@@ -197,7 +197,7 @@
       <!-- </section> -->
     </div>
     <div class="home-featuring" id="featuring">
-    
+
     </div>
   </section>
   <div class="overlay" id="overlay">
