--- a/index.html
+++ b/index.html
@@ -84,7 +84,59 @@
             </li>
           </ol>
         </div>
-
+        <div class="sidebarPlaylist">
+          <h2 class="sidebarPlaylist-title">Playlist de amigos</h2>
+          <ul class="playlistFriends">
+            <li class="playlistFriends-item">
+              <a href="#">
+                <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
+                <span>
+                  name
+                </span>
+              </a>
+            </li>
+            <li class="playlistFriends-item">
+              <a href="#">
+                <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
+                <span>
+                  name
+                </span>
+              </a>
+            </li>
+            <li class="playlistFriends-item">
+              <a href="#">
+                <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
+                <span>
+                  name
+                </span>
+              </a>
+            </li>
+            <li class="playlistFriends-item">
+              <a href="#">
+                <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
+                <span>
+                  name
+                </span>
+              </a>
+            </li>
+            <li class="playlistFriends-item">
+              <a href="#">
+                <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
+                <span>
+                  name
+                </span>
+              </a>
+            </li>
+            <li class="playlistFriends-item">
+              <a href="#">
+                <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
+                <span>
+                  name
+                </span>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
 
     </div>
